# top_journal_sdk

./: .gitignore  LICENSE  README.md  example.py  main.py  pyproject.toml  pyrightconfig.json
journal_sdk/: __init__.py  client.py  transport.py
journal_sdk/controllers/: schedule.py
journal_sdk/enums/: endpoints.py  headers.py
journal_sdk/errors/: journal_exceptions.py
journal_sdk/http/: client.py  exceptions.py
journal_sdk/models/: homework.py  schedule.py  user_info.py
journal_sdk/services/: client.py
journal_sdk/utils/: app_key.py
journaltop/: __init__.py  __main__.py  client.py  transport.py
journaltop/data/: config.py
journaltop/errors/: base.py  journal_exceptions.py
journaltop/logging/: logger.py
journaltop/models/: homework.py  schedule.py  user_info.py
journaltop/utils/: app_key.py  refresh_token.py
src/: __main__.py  auth.py  client.py  transport.py
src/aiojournal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: config.py
src/errors/: errors.py
src/logging/: logger.py
src/models/: shedule.py
src/services/: schedule.py  womework.py
src/utils/: app_key.py
