[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "journaltop"
version = "0.1.0"
description = "Async-friendly SDK for ittopjournal API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name="trapplus", email="blazer19092008@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
