[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "journal_sdk"
module-root = ""

[project]
name = "top_journal_sdk"
version = "0.1.1"
description = "Async-friendly SDK for ittopjournal API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name="thegrayfoxxx", email="cool.afkshnik@gmail.com"},{name="trapplus", email="blazer19092008@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pydantic>=2.12.3",
    "rapid-api-client>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
